added first section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>showoff webpage</title>
+    <title>showoff webpage</title> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <div class="half-width">
+        <h1>Welcome to  </h1>
+        <h1><span class="name-highlight"> Farabi</span>  Tusher webpage</h1>
+        <h3>Professional web-developer</h3> 
+        <p>hello there i am Professional front-end web developer. I can make responsive websites and makes it attractive.feel free to contract with me . I am avaiable 24 hours</p>
+   </div>
+   <div class="half-width">
+        <img src="images/profile1.png" alt="">
+   </div>
     
 </body>
 </html>
