finised my not responsive webpage

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <p>i am a Professional web-developer .i can design any responsive websites. my work with clients is always satisfy..i am a Professional web-developer .i can design any responsive websites. my work with clients is always satisfy i am a Professional web-developer .i can design any responsive websites. my work with clients is always satisfy i am a Professional web-developer .i can design any responsive websites. my work with clients is always satisfy</p>
         </div>
     </section>
+    <footer>
+        All right reserved to @farabi tusher
+    </footer>
 
 
 
